fix contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header {
 
 .sidebar {
     min-width: 300px;
-    background-color: rgb(255, 176, 176);
+    background-color: rgb(251, 143, 143);
     display: flex;
 
 }
@@ -50,7 +50,7 @@ header {
 .content-2 {
     flex-grow: 1;
     display: flex;
-    background-color: rgb(255, 176, 176);
+    background-color: rgb(251, 143, 143);
 }
 
 .inner-text {
@@ -62,7 +62,7 @@ header {
 
 
 h1 {
-    color: #fff;
+    color: rgb(0, 0, 0);
 }
 
 .flex-column {
@@ -83,7 +83,7 @@ h1 {
     margin-bottom: 1rem;
     text-decoration: none;
     color: rgb(28, 26, 26);
-    background: linear-gradient(90deg, rgb(172, 198, 255) 0%, rgb(0, 102, 255) 100%);
+    background: linear-gradient(90deg, rgb(172, 198, 255) 0%, rgb(20, 114, 255) 100%);
     border-radius: 4px;
 }
 
